Fix regression introduced by patch for Bug#10500. * xterm.c (x_draw_image_relief): Respect Vtool_bar_button_margin. * w32term.c (x_draw_image_relief): Likewise.